{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerMouse",
            "id": "2422a316-bbb2-461f-b372-6a44f53cc4c2",
            "actions": [
                {
                    "name": "MousePosition ",
                    "type": "Value",
                    "id": "072f9481-cdfd-49e7-8d75-833e5d4ea959",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseMove",
                    "type": "Button",
                    "id": "6b0af1fc-6c1e-4747-9f37-184178fac570",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c6a981c0-efd2-468f-bcfb-b495c1f267a7",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cb3190d-0e6c-4a6f-8876-2f03165b793c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerKeyboard",
            "id": "c69ade9d-91d1-4429-a854-6c86238cb941",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "118e6eaa-66fa-408c-adf4-fff205756b57",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "e533b2da-ed75-48c0-832c-5225829dd715",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "841b336c-6f03-432d-b2da-18acba2751c5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1b308bcf-18b4-449b-97b8-d1dbae2570b7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "50b582ed-d1ba-4dc5-9088-d7b00a91e82d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1eb476f1-6206-4183-b62a-8ec741528c56",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}